--- a/cetus-vortal-war/WebContent/public/resources/css/estilo.css
+++ b/cetus-vortal-war/WebContent/public/resources/css/estilo.css
@@ -7,6 +7,7 @@ body {
 	margin-right: 0px;
 	margin-bottom: 0px;
 	color: black;
+	
 }
 
 .label {
@@ -126,4 +127,10 @@ body {
 .columnas-login {
 	border-radius: 15px !important;
 	border-top-left-radius: 400px 200px;
+}
+
+.column_90 {
+	width: 76% !important;
+	background-color: green;
+	vertical-align: top;
 }
