--- a/cetus-vortal-war/WebContent/resources/css/estilo.css
+++ b/cetus-vortal-war/WebContent/resources/css/estilo.css
@@ -1,10 +1,13 @@
 @CHARSET "ISO-8859-1";
 
 body {
-	font-size: 10px;
+	font-size: 11px;
 	margin-left: 0px;
 	margin-top: 0px;
+	font-family: Georgia, serif !important;
 	margin-right: 0px;
+	text-shadow: 0px 0px 0px #000000;
+	font-weight:normal !important;
 	margin-bottom: 0px;
 	color: black;
 }
